--- a/index.html
+++ b/index.html
@@ -7,25 +7,39 @@
   <style>
     body { font-family: Arial, sans-serif; max-width: 900px; margin: 0 auto; padding: 20px; }
     .card { background: #f9f9f9; padding: 16px; margin: 12px 0; border-left: 4px solid #007bff; }
-    input, button { padding: 8px; margin: 6px; }
+    input, button, select { padding: 8px; margin: 6px; }
     h2 { margin-top: 24px; }
+    .stats { color: #666; font-size: 0.9em; margin-top: 10px; }
   </style>
 </head>
 <body>
   <h1>Помощник автоэлектрика</h1>
   <p>Профессиональная база знаний по диагностике и ремонту</p>
 
-  <h2>Ищу решение по симптому</h2>
+  <h2>По марке авто</h2>
+  <select id="brandFilter" onchange="filterByBrand()">
+    <option value="">— Все марки —</option>
+    <!-- Опции будут подгружены динамически -->
+  </select>
+
+  <h2>По симптомам</h2>
   <div>
     <button onclick="filterBySymptom('не заводится')">Не заводится</button>
     <button onclick="filterBySymptom('горит check engine')">Горит Check Engine</button>
-    <button onclick="filterBySymptom('нет зарядки')">Нет зарядки</button>
     <button onclick="filterBySymptom('утечка тока')">⚡ Утечка тока</button>
+    <button onclick="filterBySymptom('нет зарядки')">Нет зарядки</button>
+    <button onclick="filterBySymptom('троит')">Троит</button>
   </div>
 
-  <h2>Поиск по коду ошибки</h2>
+  <h2>По коду ошибки</h2>
   <input type="text" id="errorInput" placeholder="Например: P0300" />
   <button onclick="searchByCode()">Найти</button>
+
+  <div class="stats">
+    <span id="totalCount">0</span> решений,
+    <span id="brandCount">0</span> марок,
+    <span id="errorCount">0</span> кодов ошибок
+  </div>
 
   <h2>Все решения</h2>
   <div id="results"></div>
@@ -34,8 +48,30 @@
   <script>
     let allProblems = window.problems || [];
 
+    function getUniqueBrands() {
+      const brands = new Set(allProblems.map(p => p.brand).filter(b => b));
+      return Array.from(brands).sort();
+    }
+
+    function populateBrandFilter() {
+      const select = document.getElementById('brandFilter');
+      const brands = getUniqueBrands();
+      select.innerHTML = '<option value="">— Все марки —</option>';
+      brands.forEach(brand => {
+        const opt = document.createElement('option');
+        opt.value = brand;
+        opt.textContent = brand;
+        select.appendChild(opt);
+      });
+      document.getElementById('brandCount').textContent = brands.length;
+    }
+
     function render(problems) {
       const el = document.getElementById('results');
+      document.getElementById('totalCount').textContent = problems.length;
+      const errorCodes = new Set(problems.flatMap(p => p.error_codes || []));
+      document.getElementById('errorCount').textContent = errorCodes.size;
+
       if (problems.length === 0) {
         el.innerHTML = '<p>Ничего не найдено.</p>';
         return;
@@ -43,15 +79,29 @@
       el.innerHTML = problems.map(p => `
         <div class="card">
           <strong>${p.title}</strong><br>
-          <small>Марка: ${p.brand || '—'} | Симптомы: ${p.symptoms.join(', ')}</small><br>
+          <small>
+            ${p.brand ? 'Марка: ' + p.brand + ' | ' : ''}
+            Симптомы: ${(p.symptoms || []).join(', ')}<br>
+            Ошибки: ${(p.error_codes || []).join(', ')}
+          </small><br>
           <a href="${p.source_url}" target="_blank">Подробности</a>
         </div>
       `).join('');
     }
 
+    function filterByBrand() {
+      const brand = document.getElementById('brandFilter').value;
+      if (!brand) {
+        render(allProblems);
+      } else {
+        const filtered = allProblems.filter(p => p.brand === brand);
+        render(filtered);
+      }
+    }
+
     function filterBySymptom(symptom) {
       const filtered = allProblems.filter(p =>
-        p.symptoms.some(s => s.toLowerCase().includes(symptom.toLowerCase()))
+        (p.symptoms || []).some(s => s.toLowerCase().includes(symptom.toLowerCase()))
       );
       render(filtered);
     }
@@ -60,12 +110,13 @@
       const code = document.getElementById('errorInput').value.trim().toUpperCase();
       if (!code) return;
       const filtered = allProblems.filter(p =>
-        p.error_codes && p.error_codes.some(e => e.toUpperCase() === code)
+        (p.error_codes || []).some(e => e.toUpperCase() === code)
       );
       render(filtered);
     }
 
-    // Загрузка всех решений при старте
+    // Инициализация
+    populateBrandFilter();
     render(allProblems);
   </script>
 </body>
