--- a/index.html
+++ b/index.html
@@ -4,117 +4,264 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Помощник автоэлектрика</title>
+  <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><rect width='100' height='100' fill='%230d6efd'/><circle cx='50' cy='50' r='30' fill='white'/><path d='M40 30 L60 30 L60 40 L70 40 L50 70 L30 40 L40 40 Z' fill='%230d6efd'/></svg>">
+  <link href="https://fonts.googleapis.com/css2?family=Share+Tech&display=swap" rel="stylesheet">
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      max-width: 900px;
-      margin: 0 auto;
-      padding: 20px;
-      background: #fff;
-      color: #333;
+    :root {
+      --bg: #ffffff;
+      --bg-card: #f8f9fa;
+      --text: #212529;
+      --text-secondary: #6c757d;
+      --border: #dee2e6;
+      --accent: #0d6efd;
+      --accent-hover: #0b5ed7;
+      --shadow: rgba(0,0,0,0.08);
+      --header-bg: #f1f5f9;
     }
+
+    .dark-theme {
+      --bg: #121826;
+      --bg-card: #1e293b;
+      --text: #f1f5f9;
+      --text-secondary: #94a3b8;
+      --border: #334155;
+      --accent: #4fc3f7;
+      --accent-hover: #29b6f6;
+      --shadow: rgba(0,0,0,0.3);
+      --header-bg: #0f172a;
+    }
+
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: 'Share Tech', monospace;
+      background-color: var(--bg);
+      color: var(--text);
+      transition: background-color 0.3s, color 0.3s;
+      line-height: 1.6;
+    }
+
     header {
       text-align: center;
+      padding: 24px 16px;
+      background-color: var(--header-bg);
       margin-bottom: 24px;
     }
+
+    h1 {
+      font-size: 2.2rem;
+      margin-bottom: 8px;
+      color: var(--accent);
+    }
+
+    p.subtitle {
+      font-size: 1.05rem;
+      color: var(--text-secondary);
+    }
+
     nav {
       display: flex;
       justify-content: center;
-      gap: 16px;
-      margin: 16px 0;
       flex-wrap: wrap;
+      gap: 10px;
+      margin: 16px 0;
     }
+
     nav a {
       text-decoration: none;
-      color: #007bff;
-      font-weight: bold;
-      padding: 6px 12px;
-      border: 1px solid #ddd;
-      border-radius: 4px;
+      color: var(--accent);
+      font-size: 0.95rem;
+      padding: 6px 14px;
+      border: 1px solid var(--border);
+      border-radius: 20px;
+      transition: all 0.2s;
     }
+
     nav a:hover {
-      background: #f0f8ff;
+      background-color: var(--accent);
+      color: white;
     }
+
+    .theme-toggle {
+      position: absolute;
+      top: 20px;
+      right: 20px;
+      background: var(--bg-card);
+      border: 1px solid var(--border);
+      color: var(--text);
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-weight: bold;
+      transition: all 0.3s;
+    }
+
+    .container {
+      max-width: 900px;
+      margin: 0 auto;
+      padding: 0 16px;
+    }
+
     .section {
-      margin: 24px 0;
+      margin: 28px 0;
     }
+
+    h2 {
+      font-size: 1.3rem;
+      margin-bottom: 14px;
+      color: var(--accent);
+    }
+
     .controls {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 8px;
       margin: 12px 0;
     }
+
     input, button, select {
-      padding: 8px;
-      margin: 6px;
-      font-size: 14px;
+      padding: 10px 14px;
+      font-family: 'Share Tech', monospace;
+      font-size: 0.95rem;
+      border: 1px solid var(--border);
+      border-radius: 6px;
+      background: var(--bg-card);
+      color: var(--text);
+      transition: border-color 0.2s;
     }
-    .card {
-      background: #f9f9f9;
-      padding: 16px;
-      margin: 12px 0;
-      border-left: 4px solid #007bff;
-      border-radius: 4px;
+
+    input, select {
+      min-width: 180px;
     }
+
+    button, .controls button {
+      background-color: var(--accent);
+      color: white;
+      cursor: pointer;
+      border: none;
+    }
+
+    button:hover, .controls button:hover {
+      background-color: var(--accent-hover);
+    }
+
     .stats {
       display: flex;
-      gap: 20px;
-      margin: 16px 0;
-      color: #555;
-      font-size: 0.95em;
+      gap: 24px;
+      padding: 14px 0;
+      color: var(--text-secondary);
+      font-size: 0.95rem;
+      border-top: 1px solid var(--border);
+      border-bottom: 1px solid var(--border);
+      margin: 20px 0;
     }
-    h1, h2 {
-      margin: 20px 0 12px;
+
+    .card {
+      background: var(--bg-card);
+      padding: 18px;
+      margin: 14px 0;
+      border-radius: 10px;
+      box-shadow: 0 3px 10px var(--shadow);
+      border-left: 4px solid var(--accent);
+    }
+
+    .card a {
+      color: var(--accent);
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    .card a:hover {
+      text-decoration: underline;
+    }
+
+    @media (max-width: 600px) {
+      .controls {
+        flex-direction: column;
+      }
+      input, select {
+        width: 100%;
+      }
     }
   </style>
 </head>
 <body>
-  <header>
-    <h1>Помощник автоэлектрика</h1>
-    <p>Профессиональная база знаний по диагностике и ремонту</p>
-  </header>
+  <div class="theme-toggle" id="themeToggle">☀️</div>
+  <div class="container">
+    <header>
+      <h1>Помощник автоэлектрика</h1>
+      <p class="subtitle">Профессиональная база знаний по диагностике и ремонту</p>
+    </header>
 
-  <nav>
-    <a href="index.html">Главная</a>
-    <a href="#">По маркам</a>
-    <a href="#">По ошибкам</a>
-    <a href="my-car.html">Мое авто</a>
-    <a href="vin.html">Расшифровка VIN</a>
-  </nav>
+    <nav>
+      <a href="index.html">Главная</a>
+      <a href="#">По маркам</a>
+      <a href="#">По ошибкам</a>
+      <a href="my-car.html">Мое авто</a>
+      <a href="vin.html">Расшифровка VIN</a>
+    </nav>
 
-  <div class="section">
-    <h2>По марке авто</h2>
-    <select id="brandFilter" onchange="filterByBrand()">
-      <option value="">— Все марки —</option>
-    </select>
-  </div>
-
-  <div class="section">
-    <h2>Ищу решение по симптому</h2>
-    <div class="controls">
-      <button onclick="filterBySymptom('не заводится')">Не заводится</button>
-      <button onclick="filterBySymptom('горит check engine')">Горит Check Engine</button>
-      <button onclick="filterBySymptom('троит')">Троит двигатель</button>
-      <button onclick="filterBySymptom('нет зарядки')">Нет зарядки</button>
-      <button onclick="filterBySymptom('утечка тока')">⚡ Утечка тока</button>
-      <button onclick="filterBySymptom('стучит')">Стучит</button>
+    <div class="section">
+      <h2>По марке авто</h2>
+      <select id="brandFilter" onchange="filterByBrand()">
+        <option value="">— Все марки —</option>
+      </select>
     </div>
-  </div>
 
-  <div class="section">
-    <h2>Поиск по коду ошибки</h2>
-    <input type="text" id="errorInput" placeholder="Например: P0300" />
-    <button onclick="searchByCode()">Найти</button>
-  </div>
+    <div class="section">
+      <h2>Ищу решение по симптому</h2>
+      <div class="controls">
+        <button onclick="filterBySymptom('не заводится')">Не заводится</button>
+        <button onclick="filterBySymptom('горит check engine')">Горит Check Engine</button>
+        <button onclick="filterBySymptom('троит')">Троит двигатель</button>
+        <button onclick="filterBySymptom('нет зарядки')">Нет зарядки</button>
+        <button onclick="filterBySymptom('утечка тока')">⚡ Утечка тока</button>
+        <button onclick="filterBySymptom('стучит')">Стучит</button>
+      </div>
+    </div>
 
-  <div class="stats">
-    <div><strong id="totalCount">0</strong> Инструкций</div>
-    <div><strong id="brandCount">0</strong> Марок авто</div>
-    <div><strong id="errorCount">0</strong> Кодов ошибок</div>
-  </div>
+    <div class="section">
+      <h2>Поиск по коду ошибки</h2>
+      <div class="controls">
+        <input type="text" id="errorInput" placeholder="Например: P0300" />
+        <button onclick="searchByCode()">Найти</button>
+      </div>
+    </div>
 
-  <h2>Топ решений</h2>
-  <div id="results"></div>
+    <div class="stats">
+      <div><strong id="totalCount">0</strong> инструкций</div>
+      <div><strong id="brandCount">0</strong> марок</div>
+      <div><strong id="errorCount">0</strong> кодов</div>
+    </div>
+
+    <h2>Топ решений</h2>
+    <div id="results"></div>
+  </div>
 
   <script src="data/problems.js"></script>
   <script>
+    const themeToggle = document.getElementById('themeToggle');
+    const body = document.body;
+    const savedTheme = localStorage.getItem('theme');
+    if (savedTheme === 'dark') {
+      body.classList.add('dark-theme');
+      themeToggle.textContent = '🌙';
+    }
+    themeToggle.addEventListener('click', () => {
+      body.classList.toggle('dark-theme');
+      const isDark = body.classList.contains('dark-theme');
+      localStorage.setItem('theme', isDark ? 'dark' : 'light');
+      themeToggle.textContent = isDark ? '🌙' : '☀️';
+    });
+
     let allProblems = window.problems || [];
 
     function getUniqueBrands() {
@@ -184,17 +331,15 @@
       render(filtered);
     }
 
-    // Инициализация
     populateBrandFilter();
     render(allProblems);
 
-    // При загрузке: проверить, не сохранили ли марку из "Моё авто"
     document.addEventListener('DOMContentLoaded', () => {
       const savedBrand = localStorage.getItem('autoFilterBrand');
       if (savedBrand) {
-        localStorage.removeItem('autoFilterBrand'); // одноразовое применение
+        localStorage.removeItem('autoFilterBrand');
         const select = document.getElementById('brandFilter');
-        if (select) {
+        if (select && allProblems.length > 0) {
           select.value = savedBrand;
           filterByBrand();
         }
