--- a/vin.html
+++ b/vin.html
@@ -4,89 +4,209 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Расшифровка VIN</title>
+  <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><rect width='100' height='100' fill='%230d6efd'/><circle cx='50' cy='50' r='30' fill='white'/><path d='M40 30 L60 30 L60 40 L70 40 L50 70 L30 40 L40 40 Z' fill='%230d6efd'/></svg>">
+  <link href="https://fonts.googleapis.com/css2?family=Share+Tech&display=swap" rel="stylesheet">
   <style>
-    body { font-family: Arial, sans-serif; max-width: 800px; margin: 0 auto; padding: 20px; }
-    .card { background: #f0f8ff; padding: 16px; margin: 12px 0; border-left: 4px solid #007bff; }
-    input, button { padding: 10px; margin: 6px; font-size: 16px; }
-    .result { margin-top: 20px; }
-    .error { color: red; }
-    .success { color: green; }
-    a.back { display: inline-block; margin-top: 20px; color: #007bff; }
+    :root {
+      --bg: #ffffff;
+      --bg-card: #f8f9fa;
+      --text: #212529;
+      --text-secondary: #6c757d;
+      --border: #dee2e6;
+      --accent: #0d6efd;
+      --accent-hover: #0b5ed7;
+      --shadow: rgba(0,0,0,0.08);
+      --header-bg: #f1f5f9;
+    }
+    .dark-theme {
+      --bg: #121826;
+      --bg-card: #1e293b;
+      --text: #f1f5f9;
+      --text-secondary: #94a3b8;
+      --border: #334155;
+      --accent: #4fc3f7;
+      --accent-hover: #29b6f6;
+      --shadow: rgba(0,0,0,0.3);
+      --header-bg: #0f172a;
+    }
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+    body {
+      font-family: 'Share Tech', monospace;
+      background-color: var(--bg);
+      color: var(--text);
+      transition: background-color 0.3s, color 0.3s;
+      line-height: 1.6;
+    }
+    .container {
+      max-width: 800px;
+      margin: 0 auto;
+      padding: 20px;
+    }
+    header {
+      text-align: center;
+      padding: 24px 0;
+      margin-bottom: 24px;
+      background-color: var(--header-bg);
+    }
+    h1 { font-size: 2rem; color: var(--accent); margin-bottom: 8px; }
+    nav {
+      display: flex;
+      justify-content: center;
+      gap: 12px;
+      margin: 16px 0;
+      flex-wrap: wrap;
+    }
+    nav a {
+      text-decoration: none;
+      color: var(--accent);
+      padding: 6px 14px;
+      border: 1px solid var(--border);
+      border-radius: 20px;
+      font-size: 0.95rem;
+    }
+    nav a:hover { background: var(--accent); color: white; }
+    .theme-toggle {
+      position: absolute;
+      top: 20px;
+      right: 20px;
+      background: var(--bg-card);
+      border: 1px solid var(--border);
+      color: var(--text);
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      cursor: pointer;
+    }
+    input, button {
+      padding: 10px 14px;
+      font-family: 'Share Tech', monospace;
+      font-size: 1rem;
+      border: 1px solid var(--border);
+      border-radius: 6px;
+      background: var(--bg-card);
+      color: var(--text);
+    }
+    input {
+      width: 100%;
+      margin: 8px 0;
+    }
+    button {
+      background: var(--accent);
+      color: white;
+      border: none;
+      cursor: pointer;
+      margin-top: 8px;
+    }
+    button:hover {
+      background: var(--accent-hover);
+    }
+    .card {
+      background: var(--bg-card);
+      padding: 18px;
+      margin: 16px 0;
+      border-radius: 10px;
+      box-shadow: 0 3px 8px var(--shadow);
+      border-left: 4px solid var(--accent);
+    }
+    .error { color: #ff6b6b; }
+    .success { color: #4ade80; }
   </style>
 </head>
 <body>
-  <h1>Расшифровка VIN</h1>
-  <p>Введите 17-значный VIN-код вашего автомобиля:</p>
+  <div class="theme-toggle" id="themeToggle">☀️</div>
+  <div class="container">
+    <header>
+      <h1>Расшифровка VIN</h1>
+      <p class="subtitle">Введите 17-значный VIN вашего автомобиля</p>
+    </header>
 
-  <input type="text" id="vinInput" placeholder="Например: X7LLRRA1XMD123456" maxlength="17" />
-  <button onclick="decodeVIN()">Декодировать</button>
+    <nav>
+      <a href="index.html">Главная</a>
+      <a href="my-car.html">Мое авто</a>
+    </nav>
 
-  <div id="message"></div>
-  <div id="result" class="result"></div>
+    <input type="text" id="vinInput" placeholder="Например: X7LLRRA1XMD123456" maxlength="17" />
+    <button onclick="decodeVIN()">Декодировать</button>
 
-  <button onclick="saveToMyCar()" id="saveBtn" style="display:none;">📦 Сохранить в «Моё авто»</button>
+    <div id="message"></div>
+    <div id="result"></div>
+    <button id="saveBtn" style="display:none;" onclick="saveToMyCar()">📦 Сохранить в «Моё авто»</button>
 
-  <a href="index.html" class="back">← Назад к базе знаний</a>
-
-  <script>
-    let currentVINData = null;
-
-    async function decodeVIN() {
-      const vin = document.getElementById('vinInput').value.trim().toUpperCase();
-      const msg = document.getElementById('message');
-      const res = document.getElementById('result');
-      const saveBtn = document.getElementById('saveBtn');
-
-      msg.innerHTML = '';
-      res.innerHTML = '';
-      saveBtn.style.display = 'none';
-
-      if (vin.length !== 17 || !/^[A-HJ-NPR-Z0-9]{17}$/.test(vin)) {
-        msg.innerHTML = '<div class="error">VIN должен содержать 17 символов (без I, O, Q)</div>';
-        return;
+    <script>
+      const themeToggle = document.getElementById('themeToggle');
+      const body = document.body;
+      const savedTheme = localStorage.getItem('theme');
+      if (savedTheme === 'dark') {
+        body.classList.add('dark-theme');
+        themeToggle.textContent = '🌙';
       }
+      themeToggle.addEventListener('click', () => {
+        body.classList.toggle('dark-theme');
+        const isDark = body.classList.contains('dark-theme');
+        localStorage.setItem('theme', isDark ? 'dark' : 'light');
+        themeToggle.textContent = isDark ? '🌙' : '☀️';
+      });
 
-      msg.innerHTML = 'Запрос к серверу...';
-      try {
-        // Используем публичный API
-        const response = await fetch(`https://auto-api.ru/api/vin/${vin}`);
-        const data = await response.json();
+      let currentVINData = null;
 
-        if (data.error || !data.mark || !data.model) {
-          throw new Error(data.error || 'Не удалось расшифровать VIN');
+      async function decodeVIN() {
+        const vin = document.getElementById('vinInput').value.trim().toUpperCase();
+        const msg = document.getElementById('message');
+        const res = document.getElementById('result');
+        const saveBtn = document.getElementById('saveBtn');
+
+        msg.innerHTML = '';
+        res.innerHTML = '';
+        saveBtn.style.display = 'none';
+
+        if (vin.length !== 17 || !/^[A-HJ-NPR-Z0-9]{17}$/.test(vin)) {
+          msg.innerHTML = '<div class="error">VIN должен содержать 17 символов (без I, O, Q)</div>';
+          return;
         }
 
-        currentVINData = {
-          vin: vin,
-          brand: data.mark,
-          model: data.model,
-          year: data.year || 'неизвестен',
-          engine: data.engine || '',
-          body: data.body || ''
-        };
+        msg.innerHTML = 'Запрос к серверу...';
+        try {
+          const response = await fetch(`https://auto-api.ru/api/vin/${vin}`);
+          const data = await response.json();
 
-        res.innerHTML = `
-          <div class="card">
-            <strong>${currentVINData.brand} ${currentVINData.model}</strong><br>
-            Год: ${currentVINData.year}<br>
-            Двигатель: ${currentVINData.engine || '—'}<br>
-            Кузов: ${currentVINData.body || '—'}<br>
-            VIN: ${currentVINData.vin}
-          </div>
-        `;
-        saveBtn.style.display = 'inline-block';
-        msg.innerHTML = '<div class="success">VIN успешно расшифрован!</div>';
-      } catch (err) {
-        console.error(err);
-        msg.innerHTML = `<div class="error">Ошибка: ${err.message || 'сервер недоступен'}</div>`;
+          if (data.error || !data.mark || !data.model) {
+            throw new Error(data.error || 'Не удалось расшифровать VIN');
+          }
+
+          currentVINData = {
+            vin: vin,
+            brand: data.mark,
+            model: data.model,
+            year: data.year || 'неизвестен',
+            engine: data.engine || '',
+            body: data.body || ''
+          };
+
+          res.innerHTML = `
+            <div class="card">
+              <strong>${currentVINData.brand} ${currentVINData.model}</strong><br>
+              Год: ${currentVINData.year}<br>
+              Двигатель: ${currentVINData.engine || '—'}<br>
+              Кузов: ${currentVINData.body || '—'}<br>
+              VIN: ${currentVINData.vin}
+            </div>
+          `;
+          saveBtn.style.display = 'inline-block';
+          msg.innerHTML = '<div class="success">VIN успешно расшифрован!</div>';
+        } catch (err) {
+          msg.innerHTML = `<div class="error">Ошибка: ${err.message || 'сервер недоступен'}</div>`;
+        }
       }
-    }
 
-    function saveToMyCar() {
-      if (!currentVINData) return;
-      localStorage.setItem('myCar', JSON.stringify(currentVINData));
-      alert('✅ Автомобиль сохранён в «Моё авто»!');
-    }
-  </script>
+      function saveToMyCar() {
+        if (!currentVINData) return;
+        localStorage.setItem('myCar', JSON.stringify(currentVINData));
+        alert('✅ Автомобиль сохранён в «Моё авто»!');
+      }
+    </script>
+  </div>
 </body>
 </html>
