--- a/my-car.html
+++ b/my-car.html
@@ -4,65 +4,176 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Моё авто</title>
+  <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><rect width='100' height='100' fill='%230d6efd'/><circle cx='50' cy='50' r='30' fill='white'/><path d='M40 30 L60 30 L60 40 L70 40 L50 70 L30 40 L40 40 Z' fill='%230d6efd'/></svg>">
+  <link href="https://fonts.googleapis.com/css2?family=Share+Tech&display=swap" rel="stylesheet">
   <style>
-    body { font-family: Arial, sans-serif; max-width: 800px; margin: 0 auto; padding: 20px; }
-    .card { background: #f0fff0; padding: 16px; margin: 12px 0; border-left: 4px solid #28a745; }
-    button { padding: 8px 12px; margin: 6px; }
-    .empty { color: #666; }
-    a { color: #007bff; text-decoration: none; }
+    :root {
+      --bg: #ffffff;
+      --bg-card: #f8f9fa;
+      --text: #212529;
+      --text-secondary: #6c757d;
+      --border: #dee2e6;
+      --accent: #0d6efd;
+      --accent-hover: #0b5ed7;
+      --shadow: rgba(0,0,0,0.08);
+      --header-bg: #f1f5f9;
+    }
+    .dark-theme {
+      --bg: #121826;
+      --bg-card: #1e293b;
+      --text: #f1f5f9;
+      --text-secondary: #94a3b8;
+      --border: #334155;
+      --accent: #4fc3f7;
+      --accent-hover: #29b6f6;
+      --shadow: rgba(0,0,0,0.3);
+      --header-bg: #0f172a;
+    }
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+    body {
+      font-family: 'Share Tech', monospace;
+      background-color: var(--bg);
+      color: var(--text);
+      transition: background-color 0.3s, color 0.3s;
+      line-height: 1.6;
+    }
+    .container {
+      max-width: 800px;
+      margin: 0 auto;
+      padding: 20px;
+    }
+    header {
+      text-align: center;
+      padding: 24px 0;
+      margin-bottom: 24px;
+      background-color: var(--header-bg);
+    }
+    h1 { font-size: 2rem; color: var(--accent); margin-bottom: 8px; }
+    nav {
+      display: flex;
+      justify-content: center;
+      gap: 12px;
+      margin: 16px 0;
+      flex-wrap: wrap;
+    }
+    nav a {
+      text-decoration: none;
+      color: var(--accent);
+      padding: 6px 14px;
+      border: 1px solid var(--border);
+      border-radius: 20px;
+      font-size: 0.95rem;
+    }
+    nav a:hover { background: var(--accent); color: white; }
+    .theme-toggle {
+      position: absolute;
+      top: 20px;
+      right: 20px;
+      background: var(--bg-card);
+      border: 1px solid var(--border);
+      color: var(--text);
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      cursor: pointer;
+    }
+    button {
+      padding: 10px 16px;
+      margin: 8px 8px 8px 0;
+      font-family: 'Share Tech', monospace;
+      background: var(--accent);
+      color: white;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+    }
+    button:hover {
+      background: var(--accent-hover);
+    }
+    .card {
+      background: var(--bg-card);
+      padding: 18px;
+      margin: 16px 0;
+      border-radius: 10px;
+      box-shadow: 0 3px 8px var(--shadow);
+      border-left: 4px solid var(--accent);
+    }
+    .empty { color: var(--text-secondary); font-style: italic; }
   </style>
 </head>
 <body>
-  <h1>Моё авто</h1>
+  <div class="theme-toggle" id="themeToggle">☀️</div>
+  <div class="container">
+    <header>
+      <h1>Моё авто</h1>
+      <p class="subtitle">Сохранённый автомобиль для быстрого поиска решений</p>
+    </header>
 
-  <div id="carInfo"></div>
-  <div id="actions"></div>
+    <nav>
+      <a href="index.html">Главная</a>
+      <a href="vin.html">Расшифровка VIN</a>
+    </nav>
 
-  <a href="vin.html">← Расшифровать новый VIN</a><br>
-  <a href="index.html">← К базе знаний</a>
+    <div id="carInfo"></div>
+    <div id="actions"></div>
 
-  <script>
-    function renderMyCar() {
-      const saved = localStorage.getItem('myCar');
-      const info = document.getElementById('carInfo');
-      const actions = document.getElementById('actions');
+    <script>
+      const themeToggle = document.getElementById('themeToggle');
+      const body = document.body;
+      const savedTheme = localStorage.getItem('theme');
+      if (savedTheme === 'dark') {
+        body.classList.add('dark-theme');
+        themeToggle.textContent = '🌙';
+      }
+      themeToggle.addEventListener('click', () => {
+        body.classList.toggle('dark-theme');
+        const isDark = body.classList.contains('dark-theme');
+        localStorage.setItem('theme', isDark ? 'dark' : 'light');
+        themeToggle.textContent = isDark ? '🌙' : '☀️';
+      });
 
-      if (!saved) {
-        info.innerHTML = '<p class="empty">Вы ещё не сохранили автомобиль.</p>';
-        actions.innerHTML = '';
-        return;
+      function renderMyCar() {
+        const saved = localStorage.getItem('myCar');
+        const info = document.getElementById('carInfo');
+        const actions = document.getElementById('actions');
+
+        if (!saved) {
+          info.innerHTML = '<p class="empty">Вы ещё не сохранили автомобиль.</p>';
+          actions.innerHTML = '';
+          return;
+        }
+
+        const car = JSON.parse(saved);
+        info.innerHTML = `
+          <div class="card">
+            <strong>${car.brand} ${car.model}</strong><br>
+            Год: ${car.year}<br>
+            Двигатель: ${car.engine || '—'}<br>
+            Кузов: ${car.body || '—'}<br>
+            VIN: ${car.vin}
+          </div>
+        `;
+        actions.innerHTML = `
+          <button onclick="clearMyCar()">🗑️ Удалить из памяти</button>
+          <button onclick="searchInBase('${car.brand}')">🔍 Найти решения для ${car.brand}</button>
+        `;
       }
 
-      const car = JSON.parse(saved);
-      info.innerHTML = `
-        <div class="card">
-          <strong>${car.brand} ${car.model}</strong><br>
-          Год: ${car.year}<br>
-          Двигатель: ${car.engine || '—'}<br>
-          Кузов: ${car.body || '—'}<br>
-          VIN: ${car.vin}
-        </div>
-      `;
-      actions.innerHTML = `
-        <button onclick="clearMyCar()">🗑️ Удалить из памяти</button>
-        <button onclick="searchInBase('${car.brand}')">🔍 Найти решения для ${car.brand}</button>
-      `;
-    }
+      function clearMyCar() {
+        localStorage.removeItem('myCar');
+        renderMyCar();
+      }
 
-    function clearMyCar() {
-      localStorage.removeItem('myCar');
+      function searchInBase(brand) {
+        localStorage.setItem('autoFilterBrand', brand);
+        window.location.href = 'index.html';
+      }
+
       renderMyCar();
-    }
-
-    function searchInBase(brand) {
-      // Перенаправляем на главную с фильтром по марке
-      // Но так как фильтр у нас на JS — просто сохраним марку и перейдём
-      localStorage.setItem('autoFilterBrand', brand);
-      window.location.href = 'index.html';
-    }
-
-    // При загрузке
-    renderMyCar();
-  </script>
+    </script>
+  </div>
 </body>
 </html>
