--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
     <div id="results"></div>
   </div>
 
-  <script src="data/problems.js"></script>
+  <script src="db/problems.js"></script>
   <script>
     const themeToggle = document.getElementById('themeToggle');
     const body = document.body;
